[project]
name = "expenselog-api"
version = "0.1.0"
description = ""
authors = [
    {name = "LuizFCabral",email = "luizfelipe.cabralsouza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.122.0,<0.123.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "psycopg[binary] (>=3.2.13,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.6"
pytest = "^9.0.1"
taskipy = "^1.14.1"
factory-boy = "^3.3.3"
freezegun = "^1.5.5"
pytest-asyncio = "^1.3.0"
testcontainers = "^4.13.3"
pytest-cov = "^7.0.0"


[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single' 


[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.taskipy.tasks]
lint='ruff check'
pre_format='ruff check --fix'
format='ruff format'
run='fastapi dev expenselog_api/app.py'
pre_test='task lint'
test='pytest -s -x --cov=expenselog_api -vv'
post_test='coverage html'

[tool.coverage.run]
concurrency = ["thread", "greenlet"]